Etapa2/parser.output
Terminals unused in grammar

   TOKEN_ERROR
   IDENTF


State 61 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: declist

    2 declist: dec declist
    3        | /* empty */

    4 dec: DECL
    5    | FUNCT

    6 FUNCT: TYPE TK_IDENTIFIER '(' LISTPARAM ')' BODY

    7 LISTPARAM: PARAM RESTPARAM
    8          | /* empty */

    9 RESTPARAM: ',' PARAM RESTPARAM
   10          | /* empty */

   11 PARAM: TYPE TK_IDENTIFIER

   12 BODY: '{' BLCCOMAND '}'

   13 BLCCOMAND: COMAND RESTCOMAND

   14 RESTCOMAND: ';' COMAND RESTCOMAND
   15           | /* empty */

   16 COMAND: TK_IDENTIFIER '=' EXPRES
   17       | TK_IDENTIFIER '[' EXPRES ']' '=' EXPRES
   18       | CONTROLFL
   19       | KW_READ TK_IDENTIFIER
   20       | KW_PRINT LISTPRINT
   21       | KW_RETURN EXPRES
   22       | BODY
   23       | TK_IDENTIFIER OPERATOR_EQ EXPRES
   24       | /* empty */

   25 LISTPRINT: ELEMENT RESTELEMENT

   26 RESTELEMENT: ELEMENT RESTELEMENT
   27            | /* empty */

   28 ELEMENT: LIT_STRING
   29        | EXPRES

   30 CONTROLFL: KW_IF '(' EXPRES ')' KW_THEN COMAND
   31          | KW_IF '(' EXPRES ')' KW_THEN COMAND KW_ELSE COMAND
   32          | KW_WHILE '(' EXPRES ')' COMAND
   33          | KW_FOR '(' TK_IDENTIFIER '=' EXPRES KW_TO EXPRES ')' COMAND

   34 EXPRES: '(' EXPRES ')'
   35       | TK_IDENTIFIER
   36       | TK_IDENTIFIER '[' EXPRES ']'
   37       | TK_IDENTIFIER '(' LSTARG ')'
   38       | LITERALINTEGER
   39       | CARAC
   40       | VARREAL
   41       | EXPRES '*' EXPRES
   42       | EXPRES '+' EXPRES
   43       | EXPRES '-' EXPRES
   44       | EXPRES '/' EXPRES
   45       | EXPRES '<' EXPRES
   46       | EXPRES '>' EXPRES
   47       | '!' EXPRES
   48       | EXPRES OPERATOR_LE EXPRES
   49       | EXPRES OPERATOR_GE EXPRES
   50       | EXPRES OPERATOR_EQ EXPRES
   51       | EXPRES OPERATOR_NE EXPRES
   52       | EXPRES OPERATOR_AND EXPRES
   53       | EXPRES OPERATOR_OR EXPRES
   54       | '#' TK_IDENTIFIER
   55       | '&' TK_IDENTIFIER

   56 LSTARG: EXPRES ARGTAIL

   57 ARGTAIL: ',' EXPRES ARGTAIL
   58        | /* empty */

   59 DECL: TYPE TK_IDENTIFIER '=' INILIT ';'
   60     | TYPE TK_IDENTIFIER '[' LITERALINTEGER ']' ';'
   61     | TYPE TK_IDENTIFIER '[' LITERALINTEGER ']' ':' RESTINILIT ';'
   62     | TYPE '#' TK_IDENTIFIER '=' INILIT ';'

   63 TYPE: KW_CHAR
   64     | KW_FLOAT
   65     | KW_INT

   66 INILIT: CARAC
   67       | LITERALINTEGER
   68       | VARREAL

   69 RESTINILIT: INILIT RESTINILIT
   70           | /* empty */

   71 VARREAL: LIT_REAL

   72 LITERALINTEGER: LIT_INTEGER

   73 CARAC: LIT_CHAR


Terminals, with rules where they appear

$end (0) 0
'!' (33) 47
'#' (35) 54 62
'&' (38) 55
'(' (40) 6 30 31 32 33 34 37
')' (41) 6 30 31 32 33 34 37
'*' (42) 41
'+' (43) 42
',' (44) 9 57
'-' (45) 43
'/' (47) 44
':' (58) 61
';' (59) 14 59 60 61 62
'<' (60) 45
'=' (61) 16 17 33 59 62
'>' (62) 46
'[' (91) 17 36 60 61
']' (93) 17 36 60 61
'{' (123) 12
'}' (125) 12
error (256)
KW_CHAR (258) 63
KW_INT (259) 65
KW_FLOAT (260) 64
KW_IF (261) 30 31
KW_THEN (262) 30 31
KW_ELSE (263) 31
KW_WHILE (264) 32
KW_FOR (265) 33
KW_TO (266) 33
KW_READ (267) 19
KW_RETURN (268) 21
KW_PRINT (269) 20
OPERATOR_LE (270) 48
OPERATOR_GE (271) 49
OPERATOR_EQ (272) 23 50
OPERATOR_NE (273) 51
OPERATOR_AND (274) 52
OPERATOR_OR (275) 53
TK_IDENTIFIER (276) 6 11 16 17 19 23 33 35 36 37 54 55 59 60 61 62
LIT_INTEGER (277) 72
LIT_REAL (278) 71
LIT_CHAR (279) 73
LIT_STRING (280) 28
TOKEN_ERROR (281)
IDENTF (282)
IFELSE (283)


Nonterminals, with rules where they appear

$accept (48)
    on left: 0
program (49)
    on left: 1, on right: 0
declist (50)
    on left: 2 3, on right: 1 2
dec (51)
    on left: 4 5, on right: 2
FUNCT (52)
    on left: 6, on right: 5
LISTPARAM (53)
    on left: 7 8, on right: 6
RESTPARAM (54)
    on left: 9 10, on right: 7 9
PARAM (55)
    on left: 11, on right: 7 9
BODY (56)
    on left: 12, on right: 6 22
BLCCOMAND (57)
    on left: 13, on right: 12
RESTCOMAND (58)
    on left: 14 15, on right: 13 14
COMAND (59)
    on left: 16 17 18 19 20 21 22 23 24, on right: 13 14 30 31 32 33
LISTPRINT (60)
    on left: 25, on right: 20
RESTELEMENT (61)
    on left: 26 27, on right: 25 26
ELEMENT (62)
    on left: 28 29, on right: 25 26
CONTROLFL (63)
    on left: 30 31 32 33, on right: 18
EXPRES (64)
    on left: 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51
    52 53 54 55, on right: 16 17 21 23 29 30 31 32 33 34 36 41 42 43
    44 45 46 47 48 49 50 51 52 53 56 57
LSTARG (65)
    on left: 56, on right: 37
ARGTAIL (66)
    on left: 57 58, on right: 56 57
DECL (67)
    on left: 59 60 61 62, on right: 4
TYPE (68)
    on left: 63 64 65, on right: 6 11 59 60 61 62
INILIT (69)
    on left: 66 67 68, on right: 59 62 69
RESTINILIT (70)
    on left: 69 70, on right: 61 69
VARREAL (71)
    on left: 71, on right: 40 68
LITERALINTEGER (72)
    on left: 72, on right: 38 60 61 67
CARAC (73)
    on left: 73, on right: 39 66


State 0

    0 $accept: . program $end

    KW_CHAR   shift, and go to state 1
    KW_INT    shift, and go to state 2
    KW_FLOAT  shift, and go to state 3

    $default  reduce using rule 3 (declist)

    program  go to state 4
    declist  go to state 5
    dec      go to state 6
    FUNCT    go to state 7
    DECL     go to state 8
    TYPE     go to state 9


State 1

   63 TYPE: KW_CHAR .

    $default  reduce using rule 63 (TYPE)


State 2

   65 TYPE: KW_INT .

    $default  reduce using rule 65 (TYPE)


State 3

   64 TYPE: KW_FLOAT .

    $default  reduce using rule 64 (TYPE)


State 4

    0 $accept: program . $end

    $end  shift, and go to state 10


State 5

    1 program: declist .

    $default  reduce using rule 1 (program)


State 6

    2 declist: dec . declist

    KW_CHAR   shift, and go to state 1
    KW_INT    shift, and go to state 2
    KW_FLOAT  shift, and go to state 3

    $default  reduce using rule 3 (declist)

    declist  go to state 11
    dec      go to state 6
    FUNCT    go to state 7
    DECL     go to state 8
    TYPE     go to state 9


State 7

    5 dec: FUNCT .

    $default  reduce using rule 5 (dec)


State 8

    4 dec: DECL .

    $default  reduce using rule 4 (dec)


State 9

    6 FUNCT: TYPE . TK_IDENTIFIER '(' LISTPARAM ')' BODY
   59 DECL: TYPE . TK_IDENTIFIER '=' INILIT ';'
   60     | TYPE . TK_IDENTIFIER '[' LITERALINTEGER ']' ';'
   61     | TYPE . TK_IDENTIFIER '[' LITERALINTEGER ']' ':' RESTINILIT ';'
   62     | TYPE . '#' TK_IDENTIFIER '=' INILIT ';'

    TK_IDENTIFIER  shift, and go to state 12
    '#'            shift, and go to state 13


State 10

    0 $accept: program $end .

    $default  accept


State 11

    2 declist: dec declist .

    $default  reduce using rule 2 (declist)


State 12

    6 FUNCT: TYPE TK_IDENTIFIER . '(' LISTPARAM ')' BODY
   59 DECL: TYPE TK_IDENTIFIER . '=' INILIT ';'
   60     | TYPE TK_IDENTIFIER . '[' LITERALINTEGER ']' ';'
   61     | TYPE TK_IDENTIFIER . '[' LITERALINTEGER ']' ':' RESTINILIT ';'

    '('  shift, and go to state 14
    '='  shift, and go to state 15
    '['  shift, and go to state 16


State 13

   62 DECL: TYPE '#' . TK_IDENTIFIER '=' INILIT ';'

    TK_IDENTIFIER  shift, and go to state 17


State 14

    6 FUNCT: TYPE TK_IDENTIFIER '(' . LISTPARAM ')' BODY

    KW_CHAR   shift, and go to state 1
    KW_INT    shift, and go to state 2
    KW_FLOAT  shift, and go to state 3

    $default  reduce using rule 8 (LISTPARAM)

    LISTPARAM  go to state 18
    PARAM      go to state 19
    TYPE       go to state 20


State 15

   59 DECL: TYPE TK_IDENTIFIER '=' . INILIT ';'

    LIT_INTEGER  shift, and go to state 21
    LIT_REAL     shift, and go to state 22
    LIT_CHAR     shift, and go to state 23

    INILIT          go to state 24
    VARREAL         go to state 25
    LITERALINTEGER  go to state 26
    CARAC           go to state 27


State 16

   60 DECL: TYPE TK_IDENTIFIER '[' . LITERALINTEGER ']' ';'
   61     | TYPE TK_IDENTIFIER '[' . LITERALINTEGER ']' ':' RESTINILIT ';'

    LIT_INTEGER  shift, and go to state 21

    LITERALINTEGER  go to state 28


State 17

   62 DECL: TYPE '#' TK_IDENTIFIER . '=' INILIT ';'

    '='  shift, and go to state 29


State 18

    6 FUNCT: TYPE TK_IDENTIFIER '(' LISTPARAM . ')' BODY

    ')'  shift, and go to state 30


State 19

    7 LISTPARAM: PARAM . RESTPARAM

    ','  shift, and go to state 31

    $default  reduce using rule 10 (RESTPARAM)

    RESTPARAM  go to state 32


State 20

   11 PARAM: TYPE . TK_IDENTIFIER

    TK_IDENTIFIER  shift, and go to state 33


State 21

   72 LITERALINTEGER: LIT_INTEGER .

    $default  reduce using rule 72 (LITERALINTEGER)


State 22

   71 VARREAL: LIT_REAL .

    $default  reduce using rule 71 (VARREAL)


State 23

   73 CARAC: LIT_CHAR .

    $default  reduce using rule 73 (CARAC)


State 24

   59 DECL: TYPE TK_IDENTIFIER '=' INILIT . ';'

    ';'  shift, and go to state 34


State 25

   68 INILIT: VARREAL .

    $default  reduce using rule 68 (INILIT)


State 26

   67 INILIT: LITERALINTEGER .

    $default  reduce using rule 67 (INILIT)


State 27

   66 INILIT: CARAC .

    $default  reduce using rule 66 (INILIT)


State 28

   60 DECL: TYPE TK_IDENTIFIER '[' LITERALINTEGER . ']' ';'
   61     | TYPE TK_IDENTIFIER '[' LITERALINTEGER . ']' ':' RESTINILIT ';'

    ']'  shift, and go to state 35


State 29

   62 DECL: TYPE '#' TK_IDENTIFIER '=' . INILIT ';'

    LIT_INTEGER  shift, and go to state 21
    LIT_REAL     shift, and go to state 22
    LIT_CHAR     shift, and go to state 23

    INILIT          go to state 36
    VARREAL         go to state 25
    LITERALINTEGER  go to state 26
    CARAC           go to state 27


State 30

    6 FUNCT: TYPE TK_IDENTIFIER '(' LISTPARAM ')' . BODY

    '{'  shift, and go to state 37

    BODY  go to state 38


State 31

    9 RESTPARAM: ',' . PARAM RESTPARAM

    KW_CHAR   shift, and go to state 1
    KW_INT    shift, and go to state 2
    KW_FLOAT  shift, and go to state 3

    PARAM  go to state 39
    TYPE   go to state 20


State 32

    7 LISTPARAM: PARAM RESTPARAM .

    $default  reduce using rule 7 (LISTPARAM)


State 33

   11 PARAM: TYPE TK_IDENTIFIER .

    $default  reduce using rule 11 (PARAM)


State 34

   59 DECL: TYPE TK_IDENTIFIER '=' INILIT ';' .

    $default  reduce using rule 59 (DECL)


State 35

   60 DECL: TYPE TK_IDENTIFIER '[' LITERALINTEGER ']' . ';'
   61     | TYPE TK_IDENTIFIER '[' LITERALINTEGER ']' . ':' RESTINILIT ';'

    ';'  shift, and go to state 40
    ':'  shift, and go to state 41


State 36

   62 DECL: TYPE '#' TK_IDENTIFIER '=' INILIT . ';'

    ';'  shift, and go to state 42


State 37

   12 BODY: '{' . BLCCOMAND '}'

    KW_IF          shift, and go to state 43
    KW_WHILE       shift, and go to state 44
    KW_FOR         shift, and go to state 45
    KW_READ        shift, and go to state 46
    KW_RETURN      shift, and go to state 47
    KW_PRINT       shift, and go to state 48
    TK_IDENTIFIER  shift, and go to state 49
    '{'            shift, and go to state 37

    $default  reduce using rule 24 (COMAND)

    BODY       go to state 50
    BLCCOMAND  go to state 51
    COMAND     go to state 52
    CONTROLFL  go to state 53


State 38

    6 FUNCT: TYPE TK_IDENTIFIER '(' LISTPARAM ')' BODY .

    $default  reduce using rule 6 (FUNCT)


State 39

    9 RESTPARAM: ',' PARAM . RESTPARAM

    ','  shift, and go to state 31

    $default  reduce using rule 10 (RESTPARAM)

    RESTPARAM  go to state 54


State 40

   60 DECL: TYPE TK_IDENTIFIER '[' LITERALINTEGER ']' ';' .

    $default  reduce using rule 60 (DECL)


State 41

   61 DECL: TYPE TK_IDENTIFIER '[' LITERALINTEGER ']' ':' . RESTINILIT ';'

    LIT_INTEGER  shift, and go to state 21
    LIT_REAL     shift, and go to state 22
    LIT_CHAR     shift, and go to state 23

    $default  reduce using rule 70 (RESTINILIT)

    INILIT          go to state 55
    RESTINILIT      go to state 56
    VARREAL         go to state 25
    LITERALINTEGER  go to state 26
    CARAC           go to state 27


State 42

   62 DECL: TYPE '#' TK_IDENTIFIER '=' INILIT ';' .

    $default  reduce using rule 62 (DECL)


State 43

   30 CONTROLFL: KW_IF . '(' EXPRES ')' KW_THEN COMAND
   31          | KW_IF . '(' EXPRES ')' KW_THEN COMAND KW_ELSE COMAND

    '('  shift, and go to state 57


State 44

   32 CONTROLFL: KW_WHILE . '(' EXPRES ')' COMAND

    '('  shift, and go to state 58


State 45

   33 CONTROLFL: KW_FOR . '(' TK_IDENTIFIER '=' EXPRES KW_TO EXPRES ')' COMAND

    '('  shift, and go to state 59


State 46

   19 COMAND: KW_READ . TK_IDENTIFIER

    TK_IDENTIFIER  shift, and go to state 60


State 47

   21 COMAND: KW_RETURN . EXPRES

    TK_IDENTIFIER  shift, and go to state 61
    LIT_INTEGER    shift, and go to state 21
    LIT_REAL       shift, and go to state 22
    LIT_CHAR       shift, and go to state 23
    '!'            shift, and go to state 62
    '('            shift, and go to state 63
    '#'            shift, and go to state 64
    '&'            shift, and go to state 65

    EXPRES          go to state 66
    VARREAL         go to state 67
    LITERALINTEGER  go to state 68
    CARAC           go to state 69


State 48

   20 COMAND: KW_PRINT . LISTPRINT

    TK_IDENTIFIER  shift, and go to state 61
    LIT_INTEGER    shift, and go to state 21
    LIT_REAL       shift, and go to state 22
    LIT_CHAR       shift, and go to state 23
    LIT_STRING     shift, and go to state 70
    '!'            shift, and go to state 62
    '('            shift, and go to state 63
    '#'            shift, and go to state 64
    '&'            shift, and go to state 65

    LISTPRINT       go to state 71
    ELEMENT         go to state 72
    EXPRES          go to state 73
    VARREAL         go to state 67
    LITERALINTEGER  go to state 68
    CARAC           go to state 69


State 49

   16 COMAND: TK_IDENTIFIER . '=' EXPRES
   17       | TK_IDENTIFIER . '[' EXPRES ']' '=' EXPRES
   23       | TK_IDENTIFIER . OPERATOR_EQ EXPRES

    OPERATOR_EQ  shift, and go to state 74
    '='          shift, and go to state 75
    '['          shift, and go to state 76


State 50

   22 COMAND: BODY .

    $default  reduce using rule 22 (COMAND)


State 51

   12 BODY: '{' BLCCOMAND . '}'

    '}'  shift, and go to state 77


State 52

   13 BLCCOMAND: COMAND . RESTCOMAND

    ';'  shift, and go to state 78

    $default  reduce using rule 15 (RESTCOMAND)

    RESTCOMAND  go to state 79


State 53

   18 COMAND: CONTROLFL .

    $default  reduce using rule 18 (COMAND)


State 54

    9 RESTPARAM: ',' PARAM RESTPARAM .

    $default  reduce using rule 9 (RESTPARAM)


State 55

   69 RESTINILIT: INILIT . RESTINILIT

    LIT_INTEGER  shift, and go to state 21
    LIT_REAL     shift, and go to state 22
    LIT_CHAR     shift, and go to state 23

    $default  reduce using rule 70 (RESTINILIT)

    INILIT          go to state 55
    RESTINILIT      go to state 80
    VARREAL         go to state 25
    LITERALINTEGER  go to state 26
    CARAC           go to state 27


State 56

   61 DECL: TYPE TK_IDENTIFIER '[' LITERALINTEGER ']' ':' RESTINILIT . ';'

    ';'  shift, and go to state 81


State 57

   30 CONTROLFL: KW_IF '(' . EXPRES ')' KW_THEN COMAND
   31          | KW_IF '(' . EXPRES ')' KW_THEN COMAND KW_ELSE COMAND

    TK_IDENTIFIER  shift, and go to state 61
    LIT_INTEGER    shift, and go to state 21
    LIT_REAL       shift, and go to state 22
    LIT_CHAR       shift, and go to state 23
    '!'            shift, and go to state 62
    '('            shift, and go to state 63
    '#'            shift, and go to state 64
    '&'            shift, and go to state 65

    EXPRES          go to state 82
    VARREAL         go to state 67
    LITERALINTEGER  go to state 68
    CARAC           go to state 69


State 58

   32 CONTROLFL: KW_WHILE '(' . EXPRES ')' COMAND

    TK_IDENTIFIER  shift, and go to state 61
    LIT_INTEGER    shift, and go to state 21
    LIT_REAL       shift, and go to state 22
    LIT_CHAR       shift, and go to state 23
    '!'            shift, and go to state 62
    '('            shift, and go to state 63
    '#'            shift, and go to state 64
    '&'            shift, and go to state 65

    EXPRES          go to state 83
    VARREAL         go to state 67
    LITERALINTEGER  go to state 68
    CARAC           go to state 69


State 59

   33 CONTROLFL: KW_FOR '(' . TK_IDENTIFIER '=' EXPRES KW_TO EXPRES ')' COMAND

    TK_IDENTIFIER  shift, and go to state 84


State 60

   19 COMAND: KW_READ TK_IDENTIFIER .

    $default  reduce using rule 19 (COMAND)


State 61

   35 EXPRES: TK_IDENTIFIER .
   36       | TK_IDENTIFIER . '[' EXPRES ']'
   37       | TK_IDENTIFIER . '(' LSTARG ')'

    '('  shift, and go to state 85
    '['  shift, and go to state 86

    '('       [reduce using rule 35 (EXPRES)]
    $default  reduce using rule 35 (EXPRES)


State 62

   47 EXPRES: '!' . EXPRES

    TK_IDENTIFIER  shift, and go to state 61
    LIT_INTEGER    shift, and go to state 21
    LIT_REAL       shift, and go to state 22
    LIT_CHAR       shift, and go to state 23
    '!'            shift, and go to state 62
    '('            shift, and go to state 63
    '#'            shift, and go to state 64
    '&'            shift, and go to state 65

    EXPRES          go to state 87
    VARREAL         go to state 67
    LITERALINTEGER  go to state 68
    CARAC           go to state 69


State 63

   34 EXPRES: '(' . EXPRES ')'

    TK_IDENTIFIER  shift, and go to state 61
    LIT_INTEGER    shift, and go to state 21
    LIT_REAL       shift, and go to state 22
    LIT_CHAR       shift, and go to state 23
    '!'            shift, and go to state 62
    '('            shift, and go to state 63
    '#'            shift, and go to state 64
    '&'            shift, and go to state 65

    EXPRES          go to state 88
    VARREAL         go to state 67
    LITERALINTEGER  go to state 68
    CARAC           go to state 69


State 64

   54 EXPRES: '#' . TK_IDENTIFIER

    TK_IDENTIFIER  shift, and go to state 89


State 65

   55 EXPRES: '&' . TK_IDENTIFIER

    TK_IDENTIFIER  shift, and go to state 90


State 66

   21 COMAND: KW_RETURN EXPRES .
   41 EXPRES: EXPRES . '*' EXPRES
   42       | EXPRES . '+' EXPRES
   43       | EXPRES . '-' EXPRES
   44       | EXPRES . '/' EXPRES
   45       | EXPRES . '<' EXPRES
   46       | EXPRES . '>' EXPRES
   48       | EXPRES . OPERATOR_LE EXPRES
   49       | EXPRES . OPERATOR_GE EXPRES
   50       | EXPRES . OPERATOR_EQ EXPRES
   51       | EXPRES . OPERATOR_NE EXPRES
   52       | EXPRES . OPERATOR_AND EXPRES
   53       | EXPRES . OPERATOR_OR EXPRES

    OPERATOR_LE   shift, and go to state 91
    OPERATOR_GE   shift, and go to state 92
    OPERATOR_EQ   shift, and go to state 93
    OPERATOR_NE   shift, and go to state 94
    OPERATOR_AND  shift, and go to state 95
    OPERATOR_OR   shift, and go to state 96
    '<'           shift, and go to state 97
    '>'           shift, and go to state 98
    '-'           shift, and go to state 99
    '+'           shift, and go to state 100
    '*'           shift, and go to state 101
    '/'           shift, and go to state 102

    $default  reduce using rule 21 (COMAND)


State 67

   40 EXPRES: VARREAL .

    $default  reduce using rule 40 (EXPRES)


State 68

   38 EXPRES: LITERALINTEGER .

    $default  reduce using rule 38 (EXPRES)


State 69

   39 EXPRES: CARAC .

    $default  reduce using rule 39 (EXPRES)


State 70

   28 ELEMENT: LIT_STRING .

    $default  reduce using rule 28 (ELEMENT)


State 71

   20 COMAND: KW_PRINT LISTPRINT .

    $default  reduce using rule 20 (COMAND)


State 72

   25 LISTPRINT: ELEMENT . RESTELEMENT

    TK_IDENTIFIER  shift, and go to state 61
    LIT_INTEGER    shift, and go to state 21
    LIT_REAL       shift, and go to state 22
    LIT_CHAR       shift, and go to state 23
    LIT_STRING     shift, and go to state 70
    '!'            shift, and go to state 62
    '('            shift, and go to state 63
    '#'            shift, and go to state 64
    '&'            shift, and go to state 65

    $default  reduce using rule 27 (RESTELEMENT)

    RESTELEMENT     go to state 103
    ELEMENT         go to state 104
    EXPRES          go to state 73
    VARREAL         go to state 67
    LITERALINTEGER  go to state 68
    CARAC           go to state 69


State 73

   29 ELEMENT: EXPRES .
   41 EXPRES: EXPRES . '*' EXPRES
   42       | EXPRES . '+' EXPRES
   43       | EXPRES . '-' EXPRES
   44       | EXPRES . '/' EXPRES
   45       | EXPRES . '<' EXPRES
   46       | EXPRES . '>' EXPRES
   48       | EXPRES . OPERATOR_LE EXPRES
   49       | EXPRES . OPERATOR_GE EXPRES
   50       | EXPRES . OPERATOR_EQ EXPRES
   51       | EXPRES . OPERATOR_NE EXPRES
   52       | EXPRES . OPERATOR_AND EXPRES
   53       | EXPRES . OPERATOR_OR EXPRES

    OPERATOR_LE   shift, and go to state 91
    OPERATOR_GE   shift, and go to state 92
    OPERATOR_EQ   shift, and go to state 93
    OPERATOR_NE   shift, and go to state 94
    OPERATOR_AND  shift, and go to state 95
    OPERATOR_OR   shift, and go to state 96
    '<'           shift, and go to state 97
    '>'           shift, and go to state 98
    '-'           shift, and go to state 99
    '+'           shift, and go to state 100
    '*'           shift, and go to state 101
    '/'           shift, and go to state 102

    $default  reduce using rule 29 (ELEMENT)


State 74

   23 COMAND: TK_IDENTIFIER OPERATOR_EQ . EXPRES

    TK_IDENTIFIER  shift, and go to state 61
    LIT_INTEGER    shift, and go to state 21
    LIT_REAL       shift, and go to state 22
    LIT_CHAR       shift, and go to state 23
    '!'            shift, and go to state 62
    '('            shift, and go to state 63
    '#'            shift, and go to state 64
    '&'            shift, and go to state 65

    EXPRES          go to state 105
    VARREAL         go to state 67
    LITERALINTEGER  go to state 68
    CARAC           go to state 69


State 75

   16 COMAND: TK_IDENTIFIER '=' . EXPRES

    TK_IDENTIFIER  shift, and go to state 61
    LIT_INTEGER    shift, and go to state 21
    LIT_REAL       shift, and go to state 22
    LIT_CHAR       shift, and go to state 23
    '!'            shift, and go to state 62
    '('            shift, and go to state 63
    '#'            shift, and go to state 64
    '&'            shift, and go to state 65

    EXPRES          go to state 106
    VARREAL         go to state 67
    LITERALINTEGER  go to state 68
    CARAC           go to state 69


State 76

   17 COMAND: TK_IDENTIFIER '[' . EXPRES ']' '=' EXPRES

    TK_IDENTIFIER  shift, and go to state 61
    LIT_INTEGER    shift, and go to state 21
    LIT_REAL       shift, and go to state 22
    LIT_CHAR       shift, and go to state 23
    '!'            shift, and go to state 62
    '('            shift, and go to state 63
    '#'            shift, and go to state 64
    '&'            shift, and go to state 65

    EXPRES          go to state 107
    VARREAL         go to state 67
    LITERALINTEGER  go to state 68
    CARAC           go to state 69


State 77

   12 BODY: '{' BLCCOMAND '}' .

    $default  reduce using rule 12 (BODY)


State 78

   14 RESTCOMAND: ';' . COMAND RESTCOMAND

    KW_IF          shift, and go to state 43
    KW_WHILE       shift, and go to state 44
    KW_FOR         shift, and go to state 45
    KW_READ        shift, and go to state 46
    KW_RETURN      shift, and go to state 47
    KW_PRINT       shift, and go to state 48
    TK_IDENTIFIER  shift, and go to state 49
    '{'            shift, and go to state 37

    $default  reduce using rule 24 (COMAND)

    BODY       go to state 50
    COMAND     go to state 108
    CONTROLFL  go to state 53


State 79

   13 BLCCOMAND: COMAND RESTCOMAND .

    $default  reduce using rule 13 (BLCCOMAND)


State 80

   69 RESTINILIT: INILIT RESTINILIT .

    $default  reduce using rule 69 (RESTINILIT)


State 81
